syntax = "proto3";

message GenerateRequest {
  string prompt = 1;
}

message GenerateResponse {
  string generated_text = 1;
}
